sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:29: error: not found: value b
b=true
^AlgCocktailSort3:30: error: not found: value b
b=false
^AlgCocktailSort3:31: error: not found: value b
b=true
^AlgCocktailSort3:32: error: not found: value b
b=false
^