sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  var fin=getNombreValeurs()-2
  var b=false
  var debut=0
  do{
    b=false
    for (i<-debut to fin){
    	if(plusPetit(i,i+1)==false){
      	echange(i,i+1)
        b=true
    	}
  	}
    fin-=1
    var j=fin
    if (b==true){
      b=false
      while (j>=debut+1){
      	if(plusPetit(j,j-1)==true){
      		echange(j,j-1)
        	b=true
    		}
      	j-=1
    	}
    }
    debut+=1
  } while (b==true)
}
b=true
b=false
b=true
b=false
